# big-data-formats

./: .gitignore  README.md  pyproject.toml
examples/avro/: avro_example.py  fastavro_example.py  weather.avsc
examples/parquet/: pyarrow.md  pyarrow_example.py
